--- a/Figaro/Figaro.Droid/Properties/AndroidManifest.xml
+++ b/Figaro/Figaro.Droid/Properties/AndroidManifest.xml
@@ -2,4 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-sdk android:minSdkVersion="14" />
 	<application android:label="$safeprojectname$"></application>
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-feature android:name="android.hardware.camera" android:required="false" />
+	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:allowBackup="true" android:label="YOUAPPLABELNAME">
+		<activity android:configChanges="keyboardHidden|orientation" android:name="io.card.payment.CardIOActivity" />
+		<activity android:name="io.card.payment.DataEntryActivity" />
+	</application>
 </manifest>
