--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Models\TipoCocina.cs" />
     <Compile Include="Models\Zona.cs" />
     <Compile Include="Other\MenuInferior.cs" />
+    <Compile Include="Other\PlatoMenu.cs" />
     <Compile Include="RestClient\RestClient.cs" />
     <Compile Include="RestClient\TaskModel.cs" />
     <Compile Include="Services\ChefServices.cs" />
@@ -84,6 +85,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\MenuPage.xaml.cs">
       <DependentUpon>MenuPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ResumenPedido.xaml.cs">
+      <DependentUpon>ResumenPedido.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SeleccionarZona.xaml.cs">
       <DependentUpon>SeleccionarZona.xaml</DependentUpon>
@@ -262,6 +266,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ModoPago.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ResumenPedido.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
