--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -108,6 +108,9 @@
     <Compile Include="Views\VerMenu.xaml.cs">
       <DependentUpon>VerMenu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\VerPedidos.xaml.cs">
+      <DependentUpon>VerPedidos.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\VerPlato.xaml.cs">
       <DependentUpon>VerPlato.xaml</DependentUpon>
     </Compile>
@@ -285,6 +288,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\UserPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\VerPedidos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
