--- a/Figaro/Figaro.iOS/packages.config
+++ b/Figaro/Figaro.iOS/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
   <package id="PayPal.Forms" version="2.14.4" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="xamarinios10" />
+  <package id="XLabs.Core" version="2.0.5782" targetFramework="xamarinios10" />
+  <package id="XLabs.Forms" version="2.0.5782" targetFramework="xamarinios10" />
+  <package id="XLabs.IoC" version="2.0.5782" targetFramework="xamarinios10" />
+  <package id="XLabs.Platform" version="2.0.5782" targetFramework="xamarinios10" />
+  <package id="XLabs.Serialization" version="2.0.5782" targetFramework="xamarinios10" />
 </packages>
