--- a/Figaro/Figaro.iOS/Info.plist
+++ b/Figaro/Figaro.iOS/Info.plist
@@ -48,5 +48,7 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
 	<string></string>
+	<key>CFBundleName</key>
+	<string>Figaro</string>
 </dict>
 </plist>
