--- a/Figaro/Figaro/Figaro.csproj
+++ b/Figaro/Figaro/Figaro.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Services\UsuarioServices.cs" />
     <Compile Include="Services\ZonaServices.cs" />
     <Compile Include="ViewModels\FacebookViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PlatoViewModel.cs" />
     <Compile Include="ViewModels\TipoCocinaViewModel.cs" />
@@ -85,11 +86,14 @@
     <Compile Include="Views\ChefsPage.xaml.cs">
       <DependentUpon>ChefsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Login.xaml.cs">
-      <DependentUpon>Login.xaml</DependentUpon>
+    <Compile Include="Views\MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\LoginFacebook.xaml.cs">
       <DependentUpon>LoginFacebook.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\LoginMail.xaml.cs">
+      <DependentUpon>LoginMail.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ModoPago.xaml.cs">
       <DependentUpon>ModoPago.xaml</DependentUpon>
@@ -104,6 +108,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\MenuPage.xaml.cs">
       <DependentUpon>MenuPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Registrar.xaml.cs">
+      <DependentUpon>Registrar.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ResumenPedido.xaml.cs">
       <DependentUpon>ResumenPedido.xaml</DependentUpon>
@@ -323,13 +330,25 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Views\Login.xaml">
+    <EmbeddedResource Include="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\LoginFacebook.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Registrar.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\LoginMail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
