--- a/Figaro/Figaro/packages.config
+++ b/Figaro/Figaro/packages.config
@@ -12,6 +12,7 @@
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.6.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="portable45-net45+win8+wpa81" />
   <package id="XLabs.Core" version="2.0.5782" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="XLabs.Cryptography" version="2.0.5782" targetFramework="portable45-net45+win8+wpa81" />
   <package id="XLabs.Forms" version="2.0.5782" targetFramework="portable45-net45+win8+wpa81" />
   <package id="XLabs.IoC" version="2.0.5782" targetFramework="portable45-net45+win8+wpa81" />
   <package id="XLabs.Platform" version="2.0.5782" targetFramework="portable45-net45+win8+wpa81" />
