--- a/Figaro/Figaro.Droid/packages.config
+++ b/Figaro/Figaro.Droid/packages.config
@@ -3,6 +3,11 @@
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="PayPal.Forms" version="2.14.4" targetFramework="monoandroid60" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="monoandroid60" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="monoandroid60" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="monoandroid60" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="monoandroid60" />
+  <package id="Validation" version="2.2.8" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.6.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
