Arregladas estrellas listas, ver menu y añadida imagen perfil WebServices

--- a/WebServicesFigaro/WebServicesFigaro.csproj
+++ b/WebServicesFigaro/WebServicesFigaro.csproj
@@ -534,6 +534,7 @@
     <Content Include="Content\Images\ui-icons_ef8c08_256x240.png" />
     <Content Include="Content\Images\ui-icons_ffd27a_256x240.png" />
     <Content Include="Content\Images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Content\Images\user.jpg" />
     <Content Include="Content\jquery-ui.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
